# gluex-ksks-paper-analysis

./: .gitignore  Justfile  README.md  config.toml  pyproject.toml  taplo.toml  test.py
analysis/fits/accid/standard/mandelstam_high_t/splot/: spd2p_high_t.pkl  spnd2p_high_t.pkl
analysis/fits/accid/standard/mandelstam_low_t/splot/: spd2p_low_t.pkl  spnd2p_low_t.pkl
analysis/fits/accid/standard/mandelstam_very_high_t/splot/: spd2p_very_high_t.pkl  spnd2p_very_high_t.pkl
analysis/fits/accid/standard/splot/: spd2p.pkl  spnd2p.pkl
analysis/fits/accid/standard/splot/spd2p/: fit_summary.pkl  genmc_projections.pkl
analysis/fits/accid/standard/splot/spnd2p/: fit_summary.pkl  genmc_projections.pkl
analysis/fits/accid/standard/splot_double_hist/: spd2p_double_hist.pkl  spnd2p_double_hist.pkl
analysis/reports/: luminosity_summary.tex  spd2p_xsec_totals.tex  spnd2p_xsec_totals.tex
src/gluex_ksks_paper_analysis/: cli.py  config.py  databases.py  downloads.py  environment.py  fit.py  ksks_analysis_config.schema.json  splot.py  style.mplstyle  utilities.py  variables.py
