[project]
name = "gluex-ksks-paper-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
  "polars>=1.34.0",
  "numpy>=2.3.3",
  "matplotlib>=3.10.6",
  "laddu>=0.11.0",
  "pint>=0.25",
  "scipy>=1.16.2",
  "requests>=2.32.5",
  "paramiko>=4.0.0",
  "jsonschema>=4.25.1",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[project.scripts]
merge-parquet = "gluex_ksks_paper_analysis.utilities:merge_cli"
gluex-ksks-paper-analysis = "gluex_ksks_paper_analysis.cli:cli"

[tool.ruff]
target-version = "py314"

[tool.ruff.format]
quote-style = "single"
